rWheel now selects a target before rolling the 1 in 4 seeding behavior has changed

--- a/localization/en-us.json
+++ b/localization/en-us.json
@@ -92,8 +92,7 @@
                 "text": [
                     "{C:green}#1# in #2#{} chance to add {C:dark_edition}Negative",
                     "to a random {C:attention}Joker",
-                    "Otherwise, destroy a",
-                    "random {C:attention}Joker"
+                    "Otherwise, destroy it"
                 ]
             },
             "c_yart_rstrength": {
